--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.8",
+    "date-fns": "^2.28.0",
     "orlandini-sdk": "^2.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
