--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.8",
+    "antd-img-crop": "^4.1.0",
     "craco-less": "^1.18.0",
-    "orlandini-sdk": "^2.7.0",
     "date-fns": "^2.23.0",
+    "orlandini-sdk": "^2.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
