--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.8",
     "antd-img-crop": "^4.1.0",
+    "antd-mask-input": "^0.1.15",
     "craco-less": "^1.18.0",
     "date-fns": "^2.23.0",
     "orlandini-sdk": "^2.7.0",
