--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd-mask-input": "^0.1.15",
     "craco-less": "^1.18.0",
     "date-fns": "^2.23.0",
+    "lodash.debounce": "^4.0.8",
     "orlandini-sdk": "^2.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
