falta acertar msgs de erro 403

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "craco-less": "^1.18.0",
     "danielbonifacio-sdk": "^3.4.0",
     "date-fns": "^2.23.0",
+    "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "pkce-challenge": "^3.0.0",
     "qs": "^6.10.3",
